# ai-instructions-generator

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_instructions_app/: app.py
ai_instructions_app/api/routes/: health.py  workflow.py
ai_instructions_app/config/: logging.py  settings.py
ai_instructions_app/models/: database.py  workflow_models.py
ai_instructions_app/services/: workflow_service.py
ai_instructions_app/tests/: test_health.py
ai_instructions_app/utils/: file_handlers.py  validation.py
ai_instructions_app/workflow/: models.py  state.py
